# crtc

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
doc/: api.md
env/: __init__.py  constants.py  crtc.py  interactive.py  utils.py
examples/: colab.ipynb
loader/: CMakeLists.txt
loader/mocks/: mock_android.cpp  mock_fmod.cpp  mock_glesv2.cpp  mock_log.cpp  mock_stdio.c
loader/src/: base64.cpp  base64.hpp  egl.cpp  egl.hpp  hooks.cpp  hooks.hpp  jni.cpp  jni.hpp  loader.cpp  log.hpp  offsets.hpp  payloads.hpp
loader/toolchains/: toolchain-clang-armel.cmake  toolchain-clang-i386.cmake
scripts/: apt_get_dep.sh  decompress_csv.py  install.sh  patch_init_array.py  patch_libg.sh  strip_verneed.py
